@@ -2,7 +2,7 @@
 
                            I N T E R C H A N G E
 
-Interchange 4.9.4
+Interchange 4.9.5
 
 Copyright (C) 1996-2002 Red Hat, Inc., and others.
 
